[package]
name = "dice"
version = "0.1.0"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
git = "https://github.com/clap-rs/clap/"

[dependencies.rand]
version = "0.7"

[dependencies.rayon]
version = "1.3"